--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header class="mx-auto bg-slate-500 w-4/5 mt-4 p-2 text-center">
+        <h1 class="text-4xl p-2">This is header title</h1>
+        <p class="text-white p-2 font-serif">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, minima quis magni enim tempore fugiat eaque corrupti hic odit blanditiis.</p>
+        <button class="btn">Subscribe</button>
+        <button class="btn">Watch</button>
+        <button class="btn">Join</button>
+    </header>
+    <main class="mx-auto w-4/5 mt-24 p-2 bg-orange-200">
+        <h1 class="font-mono">Hello World</h1>
+        <h2 class="font-thin text-3xl">This is font thin</h2>
+        <p class="font-extrabold font-mono">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit voluptatum facilis quidem recusandae exercitationem, neque corrupti illo accusantium voluptas fugit necessitatibus, delectus perspiciatis, placeat incidunt sequi reiciendis temporibus nihil? Autem animi pariatur dicta molestias quia sed explicabo aperiam ipsa dolore!</p>
+        <div>
+            <ul class="list-inside list-disc ml-4">
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+                <li>Four</li>
+                <li>Five</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
