--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black">
-    <header class="mx-auto bg-slate-500 w-4/5 mt-4 p-4 text-center">
+    <header class="mx-auto bg-slate-500 w-4/5 mt-4 p-4 container md:text-center sm:text-left xs:text-center">
         <h1 class="text-4xl p-2">This is header title</h1>
         <p class="text-white p-2 font-serif">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, minima quis magni enim tempore fugiat eaque corrupti hic odit blanditiis.</p>
         <button class="btn">Subscribe</button>
@@ -16,7 +16,7 @@
         <button class="btn">Join</button>
     </header>
     <main class="">
-        <section class="mx-auto w-4/5 mt-14 p-4 bg-orange-200">
+        <section class="mx-auto w-4/5 mt-14 p-4 bg-orange-200 container xs:text-center sm:text-right">
             <h1 class="font-mono">Hello World</h1>
             <h2 class="font-thin text-3xl">This is font thin</h2>
             <p class="font-extrabold font-mono">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit voluptatum facilis quidem recusandae exercitationem, neque corrupti illo accusantium voluptas fugit necessitatibus, delectus perspiciatis, placeat incidunt sequi reiciendis temporibus nihil? Autem animi pariatur dicta molestias quia sed explicabo aperiam ipsa dolore!</p>
@@ -30,9 +30,13 @@
                 </ul>
             </div>
         </section>
-        <section class="bg-green-400 w-4/5 mx-auto mt-14 p-4">
+        <section class="bg-green-400 max-w-7xl mx-auto mt-14 p-4">
             <h1 class="text-5xl mb-5">This is another section</h1>
             <p>This is section paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repellat nesciunt a obcaecati. Modi consequatur alias praesentium dolores placeat aut.</p>
+        </section>
+
+        <section class="bg-purple-500 max-w-[1600px] mx-auto mt-16 sm:text-right p-9">
+            <h1 class="text-white">This is another section with max full width</h1>
         </section>
     </main>
 </body>
