basic grid layout with tailwindcss

--- a/index.html
+++ b/index.html
@@ -36,7 +36,39 @@
         </section>
 
         <section class="bg-purple-500 max-w-[1600px] mx-auto mt-16 sm:text-right p-9">
-            <h1 class="text-white">This is another section with max full width</h1>
+            <h1 class="text-center text-[30px] text-white mb-10">This is grid template section heading</h1>
+            <div class="grid lg:grid-cols-3 gap-[20px]  md:grid-cols-2 grid-cols-1">
+                <div>
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div>
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div>
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div>
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div>
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div>
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
