grid layout more

--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
         </section>
 
         <section class="bg-purple-500 max-w-[1600px] mx-auto mt-16 sm:text-right p-9">
-            <h1 class="text-center text-[30px] text-white mb-10">This is grid template section heading</h1>
+            <h1 class="text-center text-[50px] font-mono text-white mb-10">This is grid template section heading</h1>
             <div class="grid lg:grid-cols-3 gap-[20px]  md:grid-cols-2 grid-cols-1">
-                <div>
+                <div class="col-span-3 text-center">
+                    <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="" class="mx-auto">
+                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div class="col-start-2">
                     <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
                     <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
@@ -63,10 +68,15 @@
                     <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
                 </div>
-                <div>
+            </div>
+        </section>
+        <section class="max-w-[1600px] mx-auto bg-amber-200 p-10 mt-10">
+            <div class="grid grid-cols-[30%_auto] gap-[30px]">
+                <div class="border-2 p-3">
                     <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
-                    <h1 class="text-white lg:text-[40px] md:text-[30px] text-[20px]">This is another section with max full width</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem maxime possimus optio quas dignissimos quam enim eaque! Eveniet, molestiae.</p>
+                </div>
+                <div class="border-2 p-3">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A aspernatur sint aliquid fuga alias. Molestiae dolor eligendi hic distinctio numquam, maxime, natus, ducimus cum veniam earum facilis harum laborum maiores et. Sint debitis aspernatur unde similique, esse facilis, repellendus earum consectetur adipisci eius assumenda architecto cum ab alias recusandae optio! Fugiat natus fuga, tempora harum quam dicta! Facilis quidem architecto iure expedita atque tenetur blanditiis, commodi voluptatum nihil laboriosam quia. Cumque quidem doloribus eaque maxime in excepturi praesentium dolorem veniam! Architecto repudiandae doloribus aut iure, saepe deserunt! Labore maxime culpa cum harum hic fuga tempore animi porro consequatur! Labore, quae.</p>
                 </div>
             </div>
         </section>
