--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             </div>
         </section>
         <section class="max-w-[1600px] mx-auto bg-amber-200 p-10 mt-10">
-            <div class="grid grid-cols-[30%_auto] gap-[30px]">
+            <h1 class="text-4xl font-bold lg:text-center text-start font-mono text-[red] p-5 uppercase">This is grid section more</h1>
+            <div class="grid sm:grid-cols-1 lg:grid-cols-[30%_auto] gap-[30px]">
                 <div class="border-2 p-3">
                     <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
                 </div>
