flex layout using tailwind

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </ul>
             </div>
         </section>
+
         <section class="bg-green-400 max-w-7xl mx-auto mt-14 p-4">
             <h1 class="text-5xl mb-5">This is another section</h1>
             <p>This is section paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repellat nesciunt a obcaecati. Modi consequatur alias praesentium dolores placeat aut.</p>
@@ -70,15 +71,30 @@
                 </div>
             </div>
         </section>
+
         <section class="max-w-[1600px] mx-auto bg-amber-200 p-10 mt-10">
             <h1 class="text-4xl font-bold lg:text-center text-start font-mono text-[red] p-5 uppercase">This is grid section more</h1>
             <div class="grid sm:grid-cols-1 lg:grid-cols-[30%_auto] gap-[30px]">
-                <div class="border-2 p-3">
+                <div class="border-4 p-3  bg-[#1A0B38] text-white rounded-2xl">
                     <img src="https://phero-web.nyc3.cdn.digitaloceanspaces.com/website-prod-images/public/files/1717893854520.jpg" alt="">
                 </div>
-                <div class="border-2 p-3">
+                <div class="border-4 p-3 bg-[#1A0B38] text-white rounded-2xl">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A aspernatur sint aliquid fuga alias. Molestiae dolor eligendi hic distinctio numquam, maxime, natus, ducimus cum veniam earum facilis harum laborum maiores et. Sint debitis aspernatur unde similique, esse facilis, repellendus earum consectetur adipisci eius assumenda architecto cum ab alias recusandae optio! Fugiat natus fuga, tempora harum quam dicta! Facilis quidem architecto iure expedita atque tenetur blanditiis, commodi voluptatum nihil laboriosam quia. Cumque quidem doloribus eaque maxime in excepturi praesentium dolorem veniam! Architecto repudiandae doloribus aut iure, saepe deserunt! Labore maxime culpa cum harum hic fuga tempore animi porro consequatur! Labore, quae.</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="max-w-[1600px] mx-auto bg-slate-400 mt-10 p-5">
+            <h1 class="text-4xl text-center font-bold uppercase text-red-500 font-serif p-4">This is flexbox section</h1>
+            <div class="flex gap-4 bg-[#E44FEB] p-3 lg:flex-row flex-col">
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[30%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
+                <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
             </div>
         </section>
     </main>
