--- a/index.html
+++ b/index.html
@@ -97,6 +97,50 @@
                 <div class="border-4 p-6 bg-[#3F1285] text-white rounded-xl basis-[10%] h-60 overflow-scroll">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At aperiam porro ullam earum, perferendis, labore enim voluptatem blanditiis possimus eveniet dolorum quam amet odit error, suscipit ab accusamus illo nisi.</div>
             </div>
         </section>
+
+        <section class="flex flex-wrap gap-8 justify-center items-center max-w-[1600px] mt-11 bg-green-300 text-white mx-auto py-8 text-center">
+            <div class="shadow-lg p-[20px] basis-[50%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>
+            <div class="shadow-lg p-[20px] basis-[30%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>
+            <div class="shadow-lg p-[20px] basis-[30%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>
+            <div class="shadow-lg p-[20px] basis-[30%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>
+            <div class="shadow-lg p-[20px] basis-[30%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>  <div class="shadow-lg p-[20px] basis-[30%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>
+            <div class="shadow-lg p-[20px] basis-[30%] bg-slate-400 rounded-2xl">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsynjnrOiId-58TsaSjP2ZOOhBTYEwHFq7xg&s" alt="" class="mx-auto rounded-2xl py-4">
+                <h2 class="font-serif font-bold text-2xl text-black py-3
+                ">This is our work title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos sunt quaerat veritatis. Velit laboriosam suscipit maiores, itaque optio maxime aut non. Ad sequi voluptatum libero ratione, repellat laudantium ab repudiandae.</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
