--- a/intro-to-tailwind-css-with-programming-hero/index.html
+++ b/intro-to-tailwind-css-with-programming-hero/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind CSS</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <style>
+        .bebas-neue {
+        font-family: "Bebas Neue", sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <header class="max-w-screen-2xl mx-auto flex items-center justify-between p-6">
-        <div>
-            <img src="penguin-fashion-resources/icons/logo.png" alt="" class="w-96">
+    <header class="max-w-screen-2xl mx-auto md:p-6 p-2 bg-[#FFFBF0]">
+        <div class="md:flex items-center justify-between ">
+            <div class="md:mb-0 mb-14">
+                <img src="penguin-fashion-resources/icons/logo.png" alt="" class="w-96">
+            </div>
+            <nav>
+                <ul class="md:flex gap-16 font-serif font-bold text-xl hidden">
+                    <li>Home</li>
+                    <li>Product</li>
+                    <li>About Us</li>
+                    <li>Contact Us</li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul class="flex gap-16 font-serif font-bold text-xl">
-                <li>Home</li>
-                <li>Product</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
-            </ul>
-        </nav>
+        <div class="banner md:flex md:justify-start md:items-center m-3 md:m-16">
+            <div>
+                <h1 class="font-[Bebas Neue] text-7xl font-[bebas-neue] uppercase"><span class="text-orange-400">Be the Penguins</span><br><span class="text-gray-600">of Winter</span></h1>
+                <p class="w-3/4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eum ex iusto corrupti esse quam deleniti iste dicta voluptates neque.</p>
+                <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                    <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+            </div>
+            <div>
+                <img src="penguin-fashion-resources/images/model.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
         <section>
