--- a/intro-to-tailwind-css-with-programming-hero/index.html
+++ b/intro-to-tailwind-css-with-programming-hero/index.html
@@ -41,9 +41,47 @@
             </div>
         </div>
     </header>
-    <main>
-        <section>
-
+    <main class="mt-11">
+        <section class="woman-jacket max-w-screen-2xl mx-auto mb-9">
+            <h1 class="uppercase text-[48px] mb-8 ml-[100px] font-serif">Women Jacket</h1>
+            <div class="flex justify-evenly"> 
+                <div class="card w-[364px] h-[527px] shadow-xl p-4">
+                    <div class="bg-[#F1F1F1] rounded-2xl ">
+                        <img src="penguin-fashion-resources/images/jacket-1.png" alt="" class="w-[334px] h-[327px]">
+                    </div>
+                    <h3>Yellow Coat Jacket </h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex items-center gap-3 justify-between py-3">
+                        <p>$223</p>
+                        <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+                    </div>
+                </div>
+                <div class="card w-[364px] h-[527px] shadow-xl p-4">
+                    <div class="bg-[#F1F1F1] rounded-2xl ">
+                        <img src="penguin-fashion-resources/images/jacket-2.png" alt="" class="w-[334px] h-[327px]">
+                    </div>
+                    <h3>Yellow Coat Jacket </h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex items-center gap-3 justify-between py-3">
+                        <p>$223</p>
+                        <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+                    </div>
+                </div>
+                <div class="card w-[364px] h-[527px] shadow-xl p-4">
+                    <div class="bg-[#F1F1F1] rounded-2xl ">
+                        <img src="penguin-fashion-resources/images/jacket-3.png" alt="" class="w-[334px] h-[327px]">
+                    </div>
+                    <h3>Yellow Coat Jacket </h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex items-center gap-3 justify-between py-3">
+                        <p>$223</p>
+                        <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
