finished the project

--- a/intro-to-tailwind-css-with-programming-hero/index.html
+++ b/intro-to-tailwind-css-with-programming-hero/index.html
@@ -83,6 +83,79 @@
                 </div>
             </div>
         </section>
+
+        <section class="woman-jacket max-w-screen-2xl mx-auto my-14">
+            <h1 class="uppercase text-[48px] mb-8 ml-[100px] font-serif">Mans Jacket</h1>
+            <div class="grid justify-items-center md:grid-cols-2 lg:grid-cols-3 md:justify-items-center lg:justify-items-center">
+                <div class="card md:w-[364px] md:h-[527px] w-[90%] shadow-xl p-4">
+                    <div class="bg-[#F1F1F1] rounded-2xl ">
+                        <img src="penguin-fashion-resources/images/jacket-4.png" alt="" class="w-[334px] h-[327px] mx-auto p-5">
+                    </div>
+                    <h3>Yellow Coat Jacket </h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex items-center gap-3 justify-between py-3">
+                        <p>$223</p>
+                        <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+                    </div>
+                </div>
+                <div class="card md:w-[364px] md:h-[527px] w-[90%] shadow-xl p-4">
+                    <div class="bg-[#F1F1F1] rounded-2xl ">
+                        <img src="penguin-fashion-resources/images/jacket-5.png" alt="" class="w-[334px] h-[327px] mx-auto p-5">
+                    </div>
+                    <h3>Yellow Coat Jacket </h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex items-center gap-3 justify-between py-3">
+                        <p>$223</p>
+                        <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+                    </div>
+                </div>
+                <div class="card md:w-[364px] md:h-[527px] w-[90%] shadow-xl p-4">
+                    <div class="bg-[#F1F1F1] rounded-2xl ">
+                        <img src="penguin-fashion-resources/images/jacket-6.png" alt="" class="w-[334px] h-[327px] mx-auto p-5">
+                    </div>
+                    <h3>Yellow Coat Jacket </h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex items-center gap-3 justify-between py-3">
+                        <p>$223</p>
+                        <button class="bg-green-300 py-4 px-8 rounded-xl uppercase text-white bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <?xml version="1.0" ?><svg class="feather feather-shopping-cart text-white inline" fill="white" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="max-w-screen-2xl mx-auto my-36">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <div class="flex flex-col gap-9">
+                    <div class="flex justify-center items-center gap-5 shadow-lg rounded-2xl w-[650px]">
+                        <img src="penguin-fashion-resources/icons/box.png" alt="" class="w-32 h-32">
+                        <div class="w-[390px]">
+                            <h1>Find the Perfect Fit</h1>
+                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-center gap-5 shadow-lg rounded-2xl w-[650px]">
+                        <img src="penguin-fashion-resources/icons/house.png" alt="" class="w-32 h-32">
+                        <div class="w-[390px]">
+                            <h1>Find the Perfect Fit</h1>
+                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-center gap-5 shadow-lg rounded-2xl w-[650px]">
+                        <img src="penguin-fashion-resources/icons/question.png" alt="" class="w-32 h-32">
+                        <div class="w-[390px]">
+                            <h1>Find the Perfect Fit</h1>
+                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="penguin-fashion-resources/images/shopping.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
